# video-registry

./: .gitignore  README.md  pyproject.toml  run.sh
app/: main.py
app/api/client/: apis_helper.py  base_api_caller.py  fetch_youtube_videos.py
app/api/ui_api/v1/: video_registry_endpoint.py
app/core/: config.py
app/core/cron/: bg_video_updater.py
app/core/exception_handler/: video_registry_exception.py
app/core/video_management/: video_manager.py
app/data_access_layer/: __init__.py
app/data_access_layer/elasticsearch/: elasticsearch_constants.py  elasticsearch_dal.py  elasticsearch_query_builder.py  elasticsearch_util.py
app/data_access_layer/generic/: video_registry_db_interface.py
app/models/generic/: empty_response.py  paginate.py
app/models/video_registry/: video_details.py
app/models/youtube/: youtube_search_results.py  youtube_video_details.py
app/utils/: common_utils.py  config_utils.py  shared_constants.py
docker/: Dockerfile
scripts/: build.sh  lint.sh
