[tool.poetry]
name = "video-registry"
version = "0.1.0"
description = "fampay assignment"
authors = ["Vaibhav Rai <vaibhavrai46@gmail.com>"]
packages = [
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^1.8.2"
fastapi = "^0.65.2"
structlog = "^21.1.0"
uvicorn = "^0.14.0"
requests = "^2.25.1"
pytz = "^2021.1"
elasticsearch = "^7.13.2"
elasticsearch-dsl = "^7.3.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.6b0"
radon = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
run = 'scripts.run:start'
lint = 'scripts.run:lint'
fix-lint = 'scripts.run:fix_lint'
build = 'scripts.run:build'
